--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -73,19 +73,21 @@ div.MainCTA div.page-logo{
 }
 /* === Content All === */
 div.Content{
-  flex: 0 0 250px;
+  flex: 0 0 200px;
   border: 4px solid black;
+  padding: 20px 0 0 20px;
 }
 div.Content h3.content-title{
   font-size: 32px;
-  padding: 20px 0 20px 10px;
+}
+
+div.Content div.content-body{
+  width: 80ch;
 }
 
 /* === Content Right === */
 div.Content.right{
   align-items: flex-end;
-}
-div.Content.right h3.content-title{
-  padding: 20px 10px 20px 0;
+  padding: 20px 20px 0 0;
 }
 /* === Footer? === */
