--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -63,12 +63,13 @@ div.MainCTA div.hero-image{
 
 div.MainCTA h1.page-title{
   font-size: 48px;
+  text-align: center;
 }
 
 div.MainCTA div.page-logo{
   flex: 0 0 200px;
   width: 200px;
-  margin-top: 100px;
+  margin-top: 50px;
   background: red;
 }
 /* === Content All === */
