--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -1,8 +1,20 @@
 @import "./reset.css";
 
+/* === Font Imports === */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 /* === CSS Variables ===*/
 :root{
   --text:black;
+  --offblack: rgba(0,0,0,.8);
+  --offwhite: #f5f5f5;
+  --butter: #fedd00;
+  --powder: #aae1d7;
+  --accent: #e5e5e5;
+  --title: 'Iato';
+  --body: 'Open Sans';
 }
 
 /* === Global Styling === */
@@ -10,7 +22,7 @@ body, body * {
   display: flex;
   flex: 0;
   flex-direction: column;
-  font-family: Helvetica;
+  font-family: var(--body);
   font-size: 16px;
   line-height: 1.2;
   color: var(--text);
@@ -36,23 +48,36 @@ div.NavBar ul.nav-list{
 }
 ul.nav-list li.nav-li{
   flex: 1;
-  height: 50px;
-  border: 4px solid black;
+  height: 30px;
+  background: var(--accent);
+  border-bottom: 1px solid var(--offblack);
+  border-right: 1px  solid var(--offblack);
   justify-content: stretch;
 }
+
+ul.nav-list li.nav-li:last-of-type{
+  border-right: none;
+}
+
 li.nav-li a.nav-text{
   flex: 1;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   white-space: nowrap;
+  font-family: var(--title);
+}
+
+.title{
+  font-family: var(--title);
+  font-weight: 800;
 }
 
 /* === Main CTA === */
 div.MainCTA{
   flex: 0 0 600px;
-  border: 4px solid black;
-  border-top: none;
+  border-bottom: 1px solid var(--offblack);
+  background-color: var(--butter);
 }
 
 div.MainCTA div.hero-image{
@@ -61,25 +86,33 @@ div.MainCTA div.hero-image{
   align-items: center;
 }
 
-div.MainCTA h1.page-title{
-  font-size: 48px;
+div.MainCTA h1.page-title.title{
+  font-size: 82px;
   text-align: center;
+  color: var(--offwhite);
+  text-shadow: #000 -2px -2px 3px;
+  -webkit-font-smoothing: antialiased;
 }
 
 div.MainCTA div.page-logo{
   flex: 0 0 200px;
   width: 200px;
   margin-top: 50px;
-  background: red;
+  background: var(--accent);
 }
 /* === Content All === */
 div.Content{
   flex: 0 0 200px;
-  border: 4px solid black;
+  border-bottom: 1px solid var(--offblack);
   padding: 20px 0 0 20px;
 }
-div.Content h3.content-title{
+div.Content:last-of-type{
+  border-bottom: none;
+}
+
+div.Content h3.content-title.title{
   font-size: 32px;
+  font-family: var(--title);
 }
 
 div.Content div.content-body{
