--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -8,12 +8,12 @@
 :root{
   --text:black;
   --accenttext: #fff;
-  --accent: #333;
-  --accenthover: #666;
+  --accent1: #333;
+  --accent2: #555;
   --offblack: rgba(0,0,0,.8);
   --offwhite: #f5f5f5;
-  --butter: #fedd00;
-  --powder: #aae1d7;
+  --color1: #fedd00;
+  --color2: #aae1d7;
   --title: 'Montserrat';
   --body: 'Open Sans';
 }
@@ -50,11 +50,11 @@ div.NavBar ul.nav-list{
 ul.nav-list li.nav-li{
   flex: 1;
   height: 30px;
-  background: var(--accent);
+  background: var(--accent1);
   justify-content: stretch;
 }
 ul.nav-list li.nav-li:hover{
-  background: var(--accenthover);
+  background: var(--accent2);
 }
 
 li.nav-li a.nav-text{
@@ -75,29 +75,52 @@ li.nav-li a.nav-text{
 /* === Main CTA === */
 div.MainCTA{
   flex: 0 0 600px;
-  border-bottom: 1px solid var(--offblack);
-  background-color: var(--butter);
-}
-
-div.MainCTA div.hero-image{
-  flex: 1;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid var(--offblack);
+  background-color: var(--accent2);
+}
+
+div.MainCTA div.tri-one{
+  width: 0;
+  height: 0;
+  bottom: 5px;
+  left: 5px;
+  z-index: 1;
+  position: absolute;
+  border-bottom: 1230px solid var(--color1);
+  border-right: 1230px solid transparent;
+}
+
+div.MainCTA div.tri-two{
+  width: 0;
+  height: 0;
+  top: 5px;
+  right: 5px;
+  z-index: 1;
+  position: absolute;
+  border-top: 1230px solid var(--color2);
+  border-left: 1230px solid transparent;
 }
 
 div.MainCTA h1.page-title.title{
   font-size: 82px;
   text-align: center;
+  z-index: 3;
   color: var(--offwhite);
-  text-shadow: #000 -2px -2px 3px;
+  text-shadow: #000 -2px 2px 3px;
   -webkit-font-smoothing: antialiased;
 }
 
 div.MainCTA div.page-logo{
   flex: 0 0 200px;
+  z-index: 3;
   width: 200px;
   margin-top: 50px;
-  background: var(--accent);
+  background: var(--accent1);
 }
 /* === Content All === */
 div.Content{
