--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -10,10 +10,10 @@
   --accenttext: #fff;
   --accent1: #333;
   --accent2: #555;
-  --offblack: rgba(0,0,0,.8);
-  --offwhite: #f5f5f5;
   --color1: #fedd00;
+  --color1op: rgba(254, 221, 0, .5);
   --color2: #aae1d7;
+  --color2op: rgba(170, 225, 215, .5);
   --title: 'Montserrat';
   --body: 'Open Sans';
 }
@@ -80,37 +80,37 @@ div.MainCTA{
   z-index: 0;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid var(--offblack);
+  border: 6px solid var(--accent2);
   background-color: var(--accent2);
 }
 
 div.MainCTA div.tri-one{
   width: 0;
   height: 0;
-  bottom: 5px;
-  left: 5px;
+  bottom: 0;
+  left: 0;
   z-index: 1;
   position: absolute;
-  border-bottom: 1230px solid var(--color1);
-  border-right: 1230px solid transparent;
+  border-bottom: 1240px solid var(--color1);
+  border-right: 1240px solid transparent;
 }
 
 div.MainCTA div.tri-two{
   width: 0;
   height: 0;
-  top: 5px;
-  right: 5px;
+  top: 0;
+  right: 0;
   z-index: 1;
   position: absolute;
-  border-top: 1230px solid var(--color2);
-  border-left: 1230px solid transparent;
+  border-top: 1240px solid var(--color2);
+  border-left: 1240px solid transparent;
 }
 
 div.MainCTA h1.page-title.title{
   font-size: 82px;
   text-align: center;
   z-index: 3;
-  color: var(--offwhite);
+  color: var(--accenttext);
   text-shadow: #000 -2px 2px 3px;
   -webkit-font-smoothing: antialiased;
 }
@@ -127,10 +127,23 @@ div.MainCTA div.page-logo{
 /* === Content All === */
 div.Content{
   flex: 0 0 200px;
-  border-bottom: 1px solid var(--offblack);
+  border-bottom: 1px solid var(--accent1);
   padding: 20px 0 0 20px;
 }
-div.Content:last-of-type{
+
+div.Content:nth-child(odd){
+  background-color: var(--color1op);
+}
+
+div.Content:nth-child(even){
+  background: var(--color2op);
+}
+
+div.page-items>:first-child{
+  border-top: none;
+}
+
+div.page-items>:last-child{
   border-bottom: none;
 }
 
