--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -1,4 +1,6 @@
+/* === File Imports === */
 @import "./reset.css";
+@import "./HomePage/HomePage.scss";
 
 /* === Font Imports === */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -63,7 +65,7 @@ li.nav-li a.nav-text{
   justify-content: center;
   align-items: center;
   white-space: nowrap;
-  font-family: var(--title);
+  font-family: 'Open Sans';
   color: var(--accenttext);
 }
 
@@ -72,61 +74,9 @@ li.nav-li a.nav-text{
   font-weight: 800;
 }
 
-/* === Main CTA === */
-div.MainCTA{
-  flex: 0 0 600px;
-  position: relative;
-  overflow: hidden;
-  z-index: 0;
-  justify-content: center;
-  align-items: center;
-  border: 6px solid var(--accent2);
-  background-color: var(--accent2);
-}
-
-div.MainCTA div.tri-one{
-  width: 0;
-  height: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  position: absolute;
-  border-bottom: 1240px solid var(--color1);
-  border-right: 1240px solid transparent;
-}
-
-div.MainCTA div.tri-two{
-  width: 0;
-  height: 0;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  position: absolute;
-  border-top: 1240px solid var(--color2);
-  border-left: 1240px solid transparent;
-}
-
-div.MainCTA h1.page-title.title{
-  font-size: 82px;
-  text-align: center;
-  z-index: 3;
-  color: var(--accenttext);
-  text-shadow: #000 -2px 2px 3px;
-  -webkit-font-smoothing: antialiased;
-}
-
-div.MainCTA div.page-logo{
-  flex: 0 0 200px;
-  z-index: 3;
-  width: 200px;
-  margin-top: 50px;
-  background: url('./assets/cta/logotes.png');
-  background-size: contain;
-  background-position: center;
-}
 /* === Content All === */
 div.Content{
-  flex: 0 0 200px;
+  flex: 0 0 150px;
   border-bottom: 1px solid var(--accent1);
   padding: 20px 0 0 20px;
 }
