--- a/fork-app/src/App.scss
+++ b/fork-app/src/App.scss
@@ -1,6 +1,7 @@
 /* === File Imports === */
 @import "./reset.css";
 @import "./HomePage/HomePage.scss";
+@import "./shared.scss";
 
 /* === Font Imports === */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -43,72 +44,3 @@ a{
   color: var(--text);
   text-decoration: none;
 }
-
-/* === Nav Bar === */
-div.NavBar ul.nav-list{
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-ul.nav-list li.nav-li{
-  flex: 1;
-  height: 30px;
-  background: var(--accent1);
-  justify-content: stretch;
-}
-ul.nav-list li.nav-li:hover{
-  background: var(--accent2);
-}
-
-li.nav-li a.nav-text{
-  flex: 1;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  white-space: nowrap;
-  font-family: 'Open Sans';
-  color: var(--accenttext);
-}
-
-.title{
-  font-family: var(--title);
-  font-weight: 800;
-}
-
-/* === Content All === */
-div.Content{
-  flex: 0 0 150px;
-  border-bottom: 1px solid var(--accent1);
-  padding: 20px 0 0 20px;
-}
-
-div.Content:nth-child(odd){
-  background-color: var(--color1op);
-}
-
-div.Content:nth-child(even){
-  background: var(--color2op);
-}
-
-div.page-items>:first-child{
-  border-top: none;
-}
-
-div.page-items>:last-child{
-  border-bottom: none;
-}
-
-div.Content h3.content-title.title{
-  font-size: 32px;
-  font-family: var(--title);
-}
-
-div.Content div.content-body{
-  width: 80ch;
-}
-
-/* === Content Right === */
-div.Content.right{
-  align-items: flex-end;
-  padding: 20px 20px 0 0;
-}
-/* === Footer? === */
